# pyQVNCWidget

./: .gitignore  README.md  pyproject.toml  requirements.txt  testing.py
examples/: 1minimal.py  2widgetInput.py  3windowInput.py  example1.py  example2.py
qvncwidget/: qvncwidget.py  qvncwidget_old.py  rfb.py  rfb_old.py  rfbconstants.py  rfbdes.py  rfbhelpers.py  workers.py
src/: __init__.py  rfb.py  workers.py
src/examples/: example1.py
