[tool.poetry]
name = "QVncWidget"
version = "0.1.0"
description = "Passive VNC QT Widget for Python using PyQt5"
authors = ["zocker_160 <zocker1600@posteo.net>"]
license = "GPLv3+"
readme = "README.md"
repository = "https://github.com/zocker-160/pyQVNCWidget"

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.4"
Twisted = "^21.2.0"
service-identity = "^21.1.0"
pyDes = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
