[tool.poetry]
name = "QVncWidget"
version = "0.2.0"
description = "VNC QT Widget for Python using PyQt5"
authors = ["zocker_160 <zocker1600@posteo.net>"]
license = "GPLv3+"
readme = "README.md"
repository = "https://github.com/zocker-160/pyQVNCWidget"

[tool.poetry.dependencies]
python = "^3.7"
PyQt5 = "^5.11.3"
Twisted = "^21.2.0"
service-identity = "^21.1.0"
pyDes = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
